Harden duplicate file finder pipeline